css/style.css
.navbar{
   background-color: #6CAEED; 
}

.navdiv{
   display: flex;
   align-items: center;
   justify-content: space-between;
}

.logo a{
    font-size: 35px;
    font-weight: 600;
    color: white;
}

li{
    list-style: none;
    display: inline-block;
}

li a{
    font-size: 18px;
    font-weight: bold;
    color: white;
    margin-right: 25px;
}

button{
    background-color: black;
    margin-left: 10px;
    border-radius: 10px;
    padding: 10px;
    width: 90px;
}

button a{
    color: white;
    font-size: 18px;
    font-weight: bold;
    text-decoration: none;
}

